# cs_cpp_hw_repo

./: CMakeCache.txt  CMakeLists.txt  README.md  input.txt  main.cpp
explib/: crc32.cpp  crc32.h  sum32.cpp  sum32.h
